<resources>
    <string name="app_name">Airport Kotlin MVP</string>
    <string name="google_maps_key">AIzaSyCEBr3iJewO7jOIpVLxRVgf6NZ7yUwwvzo</string>
    <string name="search">Search</string>
    <string name="destination">Destination</string>
    <string name="origin">Origin</string>
    <string name="origin_destination">Origin / Destination</string>
    <string name="invalid_response_error">Got invalid response. Please try again!</string>
    <string name="something_went_wrong">Something went wrong. Please try again!</string>
    <string name="no_internet_message">Please check your internet connection.</string>
    <string name="view_on_map">VIEW ON MAP</string>
    <string name="view_details">VIEW DETAILS</string>
    <string name="ok">Got it!</string>
    <string name="back">BACK</string>
    <string name="Please_Enable_GPS">Please Enable GPS</string>
    <string name="GPS_is_not_enabled">GPS is not enabled</string>
    <string name="Please_Enable_GPS_and_Internet">Please Enable GPS and Internet</string>
    <string name="Please_Enable_Internet">Please Enable Internet</string>
    <string name="Network_is_not_enabled">Network is not enabled</string>
    <string name="title_activity_maps">Map</string>
    <string name="empty_schedule">NO FLIGHT FOUND</string>
    <string name="arrivaldate">ArrivalDate:</string>
    <string name="departuredate">DepartureDate:</string>
    <string name="enter_origin">Please enter origin airport code.</string>
    <string name="enter_destination">Please enter destination airport code.</string>
</resources>
